--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="container bg-dark">
-  <main class="container text-white">
+  <main class="container text-white text-center">
     <label for="text">Name :</label>
 
     <input type="text" name="" id="nameField" class="name mt-5"><br>
@@ -30,7 +30,7 @@
 
   <hr>
 
-  <button id="btn" type="btn">Enter</button>
+  <button id="btn" type="btn" class="btn bg-warning p-3 w-25">Enter</button>
   </main>
 
   <script src="script/home.js"></script>
