--- a/information.html
+++ b/information.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body class="container bg-dark text-white">
+<body class="container bg-dark text-white text-center">
   
 
   <h1 id="display"></h1>
